--- a/site/web/app/themes/salient-child/style.css
+++ b/site/web/app/themes/salient-child/style.css
@@ -7,138 +7,142 @@ Author URI:  https://13milliseconds.com
 Template: salient
 Version: 1.0
 */
-/* line 11, style.scss */
+/* line 17, style.scss */
 body {
   color: #000000;
 }
-/* line 14, style.scss */
+/* line 20, style.scss */
 body h1 {
   color: #ce1126;
 }
-/* line 18, style.scss */
+/* line 24, style.scss */
 body h2, body h3, body h4, body h5 {
   color: #000000;
 }
-/* line 22, style.scss */
+/* line 28, style.scss */
 body .text-white {
   color: #ffffff;
 }
 
-/* line 27, style.scss */
+/* line 33, style.scss */
 p {
   padding-bottom: 20px;
 }
 
 /* unvisited link */
-/* line 34, style.scss */
+/* line 40, style.scss */
 a:link {
   color: #ce1126;
 }
-/* line 37, style.scss */
+/* line 43, style.scss */
 a:hover {
   color: #f44a5d;
 }
-/* line 40, style.scss */
+/* line 46, style.scss */
 a:active {
   color: #FFFFFF;
 }
 
 /* mouse over link */
 /* selected link */
-/* line 49, style.scss */
+/* line 55, style.scss */
 .icon-salient-plus {
   visibility: hidden !important;
 }
 
-/* line 53, style.scss */
+/* line 59, style.scss */
 .container {
   padding: 0;
 }
 
-/* line 57, style.scss */
+/* line 63, style.scss */
 .portfolio-items .col {
   background-color: #ffffff;
 }
 
-/* line 61, style.scss */
+/* line 67, style.scss */
 .nectar-love, .icon-salient-back-to-all {
   display: none !important;
 }
 
-/* line 65, style.scss */
+/* line 71, style.scss */
 .project-title {
   background-color: #000000 !important;
 }
-/* line 68, style.scss */
+/* line 74, style.scss */
 .project-title .section-title {
   padding: 0 !important;
 }
-/* line 71, style.scss */
+/* line 77, style.scss */
 .project-title .section-title h1 {
   color: #FFFFFF;
 }
 
-/* line 77, style.scss */
+/* line 83, style.scss */
 .container-wrap, .project-title {
   margin-top: 0 !important;
   padding-top: 0;
 }
 
-/* line 82, style.scss */
+/* line 88, style.scss */
 .swiper-slide[data-bg-alignment="center"] {
   margin-bottom: 50px;
 }
 
-/* line 86, style.scss */
+/* line 92, style.scss */
 .row .col.section-title {
   padding: 30px 0px !important;
 }
 
-/* line 90, style.scss */
+/* line 96, style.scss */
 #page-header-bg h1 {
-  line-height: 40px !important;
+  line-height: 40px;
 }
 
-/* line 95, style.scss */
+/* line 101, style.scss */
 body h1, body .row .col.section-title h1 {
-  line-height: 40px !important;
+  line-height: 40px;
 }
 
-/* line 100, style.scss */
+/* line 106, style.scss */
 [class^="icon-"], [class*=" icon-"] {
   background-color: #FFFFFF !important;
 }
 
 @media only screen and (max-width: 1000px) and (min-width: 690px) {
-  /* line 106, style.scss */
+  /* line 112, style.scss */
   .portfolio-items:not(.carousel) .col.span_4, .portfolio-items:not(.carousel) .col.span_3 {
     width: 49% !important;
     margin: 1px !important;
   }
 }
-/* line 114, style.scss */
+/* line 120, style.scss */
 .portfolio-items .col.span_4 {
   width: 32.5%;
   margin: 0px 1px;
 }
-/* line 118, style.scss */
+/* line 124, style.scss */
 .portfolio-items .col.span_3 {
   width: 24%;
   margin: 0px 1px;
 }
 
-/* line 124, style.scss */
+/* line 130, style.scss */
 body .portfolio-items .col {
   height: auto;
   margin-bottom: 2px !important;
 }
 
-/* line 129, style.scss */
+/* line 135, style.scss */
 #footer-outer #copyright li a i {
   color: white;
 }
 
-/* line 133, style.scss */
+/* line 139, style.scss */
+.portfolio-items .col .work-item .work-info {
+  padding: 0 10%;
+}
+/* line 142, style.scss */
 .portfolio-items .col .work-item .work-info a {
   background-color: rgba(1, 1, 1, 0);
   font-family: Montserrat;
@@ -146,214 +150,255 @@ body .portfolio-items .col {
   text-transform: uppercase;
   text-align: center;
 }
-
-/* line 141, style.scss */
-.menu-item img {
-  width: 15px !important;
-  margin-bottom: 5px !important;
-}
-
-/* line 146, style.scss */
-.facebooklogo:hover {
-  background-image: url("https://web.archive.org/web/20181205033411im_/http://showofforce.com/official/wp-content/uploads/2015/06/facebook-red.png");
-}
-
 /* line 150, style.scss */
-.twitterlogo:hover {
-  background-image: url("https://web.archive.org/web/20181205033411im_/http://showofforce.com/official/wp-content/uploads/2015/06/twitter-red.png");
-}
-
-/* line 154, style.scss */
-#footer-outer #copyright {
-  margin-bottom: 20px;
-}
-
-/*################  PORTFOLIO  #########################*/
-/* line 160, style.scss */
-.portfolio-filters-inline .container ul {
-  float: left;
-}
-
-/* line 164, style.scss */
-.portfolio-items .col .work-info .vert-center {
+.portfolio-items .col .work-item .work-info .vert-center {
   text-align: center !important;
   font-size: 20px;
 }
-/* line 168, style.scss */
-.portfolio-items .col .work-info .vert-center p {
+/* line 154, style.scss */
+.portfolio-items .col .work-item .work-info .vert-center p {
   text-transform: uppercase;
   font-size: 14px;
   line-height: 18px;
   text-align: left !important;
 }
-/* line 175, style.scss */
-.portfolio-items .col .work-info .vert-center h3 {
-  padding-bottom: 20px;
+/* line 161, style.scss */
+.portfolio-items .col .work-item .work-info .vert-center h3 {
+  font-weight: 700;
+  line-height: 1;
+  margin-bottom: 10px;
   text-transform: uppercase;
   font-size: 26px;
   text-align: left !important;
 }
 
-/* line 183, style.scss */
+/* line 172, style.scss */
+.menu-item img {
+  width: 15px !important;
+  margin-bottom: 5px !important;
+}
+
+/* line 177, style.scss */
+.facebooklogo:hover {
+  background-image: url("https://web.archive.org/web/20181205033411im_/http://showofforce.com/official/wp-content/uploads/2015/06/facebook-red.png");
+}
+
+/* line 181, style.scss */
+.twitterlogo:hover {
+  background-image: url("https://web.archive.org/web/20181205033411im_/http://showofforce.com/official/wp-content/uploads/2015/06/twitter-red.png");
+}
+
+/* line 185, style.scss */
+#footer-outer #copyright {
+  margin-bottom: 20px;
+}
+
+/* line 190, style.scss */
+#about h1 {
+  color: #000000;
+}
+
+/* line 196, style.scss */
+.portfolio-filters-inline .container ul a {
+  font-size: 1em !important;
+}
+
+/* line 202, style.scss */
+#contact h2 {
+  color: #ffffff;
+  line-height: 1em;
+}
+
+/*################  PORTFOLIO  #########################*/
+/* line 211, style.scss */
+.portfolio-filters-inline .container ul {
+  float: left;
+}
+
+/* line 215, style.scss */
 .portfolio-filters-inline .container ul a {
   font-size: 20px;
   padding-left: 0px;
   padding-right: 20px;
 }
-/* line 187, style.scss */
+/* line 219, style.scss */
 .portfolio-filters-inline .container ul a:hover {
   color: white;
 }
 
+/* line 225, style.scss */
+.nectar-milestone .number,
+.nectar-milestone .symbol-wrap {
+  font-size: 40px !important;
+}
+
 /*################  SINGLE PORTFOLIO ITEM  #########################*/
-/* line 195, style.scss */
+/* line 234, style.scss */
 #full_width_portfolio #page-header-bg {
   background-color: black !important;
 }
-/* line 197, style.scss */
+/* line 236, style.scss */
 #full_width_portfolio #page-header-bg h1 {
   color: white !important;
 }
-/* line 201, style.scss */
+/* line 240, style.scss */
 #full_width_portfolio h1 {
   text-align: left;
 }
 
-/* line 206, style.scss */
+/* line 245, style.scss */
 .single-portfolio .row .col.section-title h1 {
   text-align: left !important;
 }
 
-/* line 210, style.scss */
+/* line 249, style.scss */
 #portfolio-nav a i {
   color: #cccccc !important;
 }
 
-/* line 215, style.scss */
+/* line 254, style.scss */
 #full_width_portfolio .container-wrap {
   background-color: black !important;
   color: white !important;
 }
-/* line 219, style.scss */
+/* line 258, style.scss */
 #full_width_portfolio h2 {
   color: white !important;
 }
 
-/* line 224, style.scss */
+/* line 263, style.scss */
 .icon-salient-left-arrow-thin {
   color: white !important;
 }
 
-/* line 228, style.scss */
+/* line 267, style.scss */
 .carousel-next, .carousel-prev {
   background-color: transparent;
 }
 
-/* line 232, style.scss */
+/* line 271, style.scss */
 #top #logo img {
   margin-top: 3px;
 }
 
-/* line 236, style.scss */
+/* line 275, style.scss */
 .single-portfolio #post-area {
   width: 100% !important;
 }
 
 /*################  TEAM  #########################*/
-/* line 242, style.scss */
+/* line 281, style.scss */
 .portfolio-items .col .work-info-bg {
   background-color: black;
 }
 
-/* line 246, style.scss */
+/* line 285, style.scss */
+#team {
+  text-align: center;
+}
+/* line 289, style.scss */
+#team h2 a {
+  color: #000000;
+}
+/* line 294, style.scss */
+#team h4 {
+  font-weight: 100;
+  text-transform: uppercase;
+}
+
+/* line 300, style.scss */
 .team {
   background-color: #ce1126 !important;
 }
 
 @media only screen and (min-width: 1000px) and (max-width: 1300px) {
-  /* line 251, style.scss */
+  /* line 305, style.scss */
   .portfolio-items .work-meta p {
     font-size: 9px;
   }
 
-  /* line 254, style.scss */
+  /* line 308, style.scss */
   body {
     background-color: black !important;
   }
 }
-/* line 259, style.scss */
+/* line 313, style.scss */
 .work-meta {
   height: 60px;
 }
-/* line 261, style.scss */
+/* line 315, style.scss */
 .work-meta p {
   line-height: 15px !important;
   padding-top: 5px;
 }
 
 /*################  BACKGROUNDS  #########################*/
-/* line 269, style.scss */
+/* line 323, style.scss */
 #ajax-loading-screen {
   background-color: black;
 }
 
-/* line 273, style.scss */
+/* line 327, style.scss */
 body {
   background-color: black !important;
 }
 
-/* line 277, style.scss */
+/* line 331, style.scss */
 .team-member h4 {
   font-size: 15px;
   text-transform: uppercase !important;
 }
 
-/* line 282, style.scss */
+/* line 336, style.scss */
 .position {
   font-size: 12px;
   text-transform: uppercase !important;
 }
 
-/* line 287, style.scss */
+/* line 341, style.scss */
 .team-member img {
   margin-bottom: 0px !important;
 }
 
 /*################  SOCIAL GOOD PAGE  #########################*/
-/* line 294, style.scss */
+/* line 348, style.scss */
+#social-top .vc_column-inner {
+  text-align: center;
+}
+
+/* line 354, style.scss */
 .white-sg-text p {
   color: white;
   font-size: 16px;
   text-transform: none !important;
 }
-/* line 299, style.scss */
+/* line 360, style.scss */
 .white-sg-text h1 {
   color: white;
-  font-size: 50px;
-  line-height: 45px !important;
+  line-height: 45px;
   text-transform: uppercase;
 }
 
-/* line 307, style.scss */
+/* line 367, style.scss */
 .blue-bg {
   background: #459ad4;
   padding: 20px !important;
   text-align: center;
   color: #0a0a0a;
 }
-/* line 313, style.scss */
+/* line 373, style.scss */
 .blue-bg p {
   width: 70%;
   margin: 0 auto;
 }
-/* line 317, style.scss */
+/* line 377, style.scss */
 .blue-bg h1 {
   font-size: 40px;
   color: white !important;
   padding-bottom: 20px;
 }
 
-/* line 325, style.scss */
+/* line 385, style.scss */
 .button-sg-white {
   padding: 20px;
   background: white;
@@ -361,16 +406,16 @@ body {
   font-size: 20px;
   font-weight: 700;
 }
-/* line 331, style.scss */
+/* line 391, style.scss */
 .button-sg-white:hover {
   color: #1d6da4 !important;
 }
-/* line 333, style.scss */
+/* line 393, style.scss */
 .button-sg-white:hover i {
   color: #1d6da4 !important;
 }
 
-/* line 339, style.scss */
+/* line 399, style.scss */
 .icon-tiny-sg {
   line-height: 20px !important;
   height: 20px;
@@ -381,24 +426,24 @@ body {
   background-color: transparent !important;
 }
 
-/* line 349, style.scss */
+/* line 409, style.scss */
 .grey-bg {
   color: #0a0a0a;
 }
-/* line 351, style.scss */
+/* line 411, style.scss */
 .grey-bg h1 {
   font-size: 35px;
   color: #459ad4 !important;
   padding-bottom: 20px;
   text-transform: uppercase;
 }
-/* line 357, style.scss */
+/* line 417, style.scss */
 .grey-bg .large {
   font-size: 20px !important;
   border: 3px solid !important;
 }
 
-/* line 363, style.scss */
+/* line 423, style.scss */
 .button-sg-grey {
   padding: 20px;
   background: #d8d8d8;
@@ -407,27 +452,27 @@ body {
   font-size: 20px;
   font-weight: 700;
 }
-/* line 370, style.scss */
+/* line 430, style.scss */
 .button-sg-grey:hover {
   color: #1d6da4 !important;
 }
-/* line 371, style.scss */
+/* line 431, style.scss */
 .button-sg-grey:hover i {
   color: #1d6da4 !important;
 }
 
-/* line 378, style.scss */
+/* line 438, style.scss */
 .sg-portfolio .work-info-bg {
   background-color: #459ad4 !important;
 }
 
-/* line 382, style.scss */
+/* line 442, style.scss */
 .vert-cent {
   display: table-cell;
   vertical-align: middle;
 }
 
-/* line 387, style.scss */
+/* line 447, style.scss */
 .vert-cent-wrap {
   display: table;
   height: auto;
@@ -435,58 +480,65 @@ body {
 }
 
 @media only screen and (max-width: 1300px) and (min-width: 1000px) {
-  /* line 394, style.scss */
+  /* line 454, style.scss */
   .button-sg-grey {
     padding: 15px !important;
     font-size: 17px !important;
   }
 }
 @media only screen and (max-width: 990px) and (min-width: 470px) {
-  /* line 401, style.scss */
+  /* line 461, style.scss */
   .button-sg-white {
     padding: 15px;
     font-size: 17px;
   }
 
-  /* line 405, style.scss */
+  /* line 465, style.scss */
   .grey-bg {
     text-align: center;
   }
 
-  /* line 408, style.scss */
+  /* line 468, style.scss */
   .button-sg-grey {
     padding: 15px !important;
     font-size: 17px !important;
   }
 }
-@media only screen and (max-width: 470px) {
-  /* line 415, style.scss */
+@media only screen and (max-width: 690px) {
+  /* line 475, style.scss */
+  body h1,
+  body .white-sg-text h1 {
+    font-size: 30px;
+    line-height: 1.2em;
+  }
+
+  /* line 481, style.scss */
   .blue-bg h1 {
     font-size: 30px;
   }
 
-  /* line 418, style.scss */
+  /* line 484, style.scss */
   .button-sg-white {
     padding: 10px;
     font-size: 12px;
     background-color: transparent;
     color: #fff !important;
   }
-  /* line 423, style.scss */
+  /* line 489, style.scss */
   .button-sg-white i {
     color: #fff !important;
   }
-  /* line 426, style.scss */
+  /* line 492, style.scss */
   .button-sg-white:hover {
     color: #fafafa !important;
   }
 
-  /* line 430, style.scss */
+  /* line 496, style.scss */
   .grey-bg {
     text-align: center;
   }
 
-  /* line 433, style.scss */
+  /* line 499, style.scss */
   .button-sg-grey {
     padding: 15px !important;
     font-size: 17px !important;
@@ -494,65 +546,75 @@ body {
     background-color: transparent;
   }
 }
-/* line 441, style.scss */
+/* line 507, style.scss */
 #footer-outer #copyright {
   margin-bottom: 0px !important;
 }
 
 /*################  AMBASSADORS SIGN UP  #########################*/
-/* line 447, style.scss */
+/* line 513, style.scss */
 input {
   padding-bottom: 40px;
 }
 
 /*################  SOF Social Good  #########################*/
-/* line 453, style.scss */
+/* line 519, style.scss */
 #about-more {
   display: none;
 }
-/* line 455, style.scss */
+/* line 521, style.scss */
 #about-more.active {
   display: block;
 }
 
-/* line 460, style.scss */
+/* line 526, style.scss */
 .white-sg-text h3 {
   color: white;
 }
 
-/* line 464, style.scss */
+/* line 530, style.scss */
 .blog-title h1 {
   color: #459ad4;
 }
 
-/* line 468, style.scss */
+/* line 534, style.scss */
 input[type=submit] {
   background-color: #459ad4;
 }
-/* line 470, style.scss */
+/* line 536, style.scss */
 input[type=submit]#mc-embedded-subscribe:hover {
   background-color: #459ad4 !important;
   opacity: .6;
 }
 
-/* line 476, style.scss */
+/* line 542, style.scss */
 body header#top nav .sf-menu ul li.current-menu-item > a {
   color: white !important;
   text-transform: uppercase;
 }
 
-/* line 482, style.scss */
+/* line 548, style.scss */
 .sub-menu a:link, .sub-menu a:hover, .sub-menu a:visited {
   color: white !important;
   text-transform: uppercase;
 }
 
-/* line 488, style.scss */
+/* line 554, style.scss */
 body header#top nav .sf-menu ul li.current-menu-item > a:hover {
   color: #459ad4 !important;
 }
 
-/* line 494, style.scss */
+/* line 561, style.scss */
+#blog h3.title a,
+#blog h1 {
+  color: #459ad4;
+}
+/* line 566, style.scss */
+#blog .meta-category {
+  display: none;
+}
+
+/* line 571, style.scss */
 #author-bio {
   display: none;
 }
