--- a/site/web/app/themes/salient/css/salient-dynamic-styles.css
+++ b/site/web/app/themes/salient/css/salient-dynamic-styles.css
@@ -1302,8 +1302,6 @@ body .dark .testimonial_slider[data-style="multiple_visible"][data-color*="accen
 	.page-template-template-portfolio-php .portfolio-items .col.span_3, 
 	.page-template-template-portfolio-php .portfolio-items .col.span_4 { 
 		background-color: #ffffff; 
-	}body, body h1, body h2, body h3, body h4, body h5, body h6, .masonry.material .masonry-blog-item .grav-wrap .text { 
-		color: #000000; 
 	}
 		#footer-outer, 
 		#nectar_fullscreen_rows > #footer-outer.wpb_row .full-page-inner-wrap { 
@@ -1830,8 +1828,91 @@ body .dark .testimonial_slider[data-style="multiple_visible"][data-color*="accen
 			}
 
 	
+	#page-header-bg h2, body h2, article.post .post-header h2, article.post.quote .post-content h2, 
+		article.post.link .post-content h2, #call-to-action span, .woocommerce .full-width-tabs #reviews h3, 
+		.row .col.section-title h2, .nectar_single_testimonial[data-style="bold"] p,
+		.woocommerce-account .woocommerce > #customer_login .nectar-form-controls .control,
+		body #error-404 h2, .woocommerce-page .woocommerce p.cart-empty { font-size:30px; line-height:49.5px; font-weight:700;  }		
+		.single-product div.product h1.product_title {
+			font-size: 30px;
+			line-height: 49px;
+		}
+		
+		@media only screen and (max-width: 1300px) and (min-width: 1000px) {
+		 	body h2, .single-product div.product h1.product_title {
+		 		font-size: 25.5px;
+				line-height: 41.65px;
+			}
+			.row .span_2 h2, .row .span_3 h2, .row .span_4 h2, .row .vc_col-sm-2 h2, .row .vc_col-sm-3 h2, .row .vc_col-sm-4 h2 { 
+				font-size: 21px;
+				line-height: 34.3px;
+			}
+			
+		}
+
+		@media only screen and (max-width: 999px) and (min-width: 690px) {
+		.col h2, h2, .single-product div.product h1.product_title, .woocommerce-account .woocommerce > #customer_login .nectar-form-controls .control {
+				font-size: 24px;
+				line-height: 39.2px;
+			}
+			.wpb_wrapper h2.vc_custom_heading {
+				font-size: 24px!important;
+				line-height: 39.2px!important;
+			}
+			
+		}
+
+		@media only screen and (max-width: 690px) {
+		.col h2, h2, .single-product div.product h1.product_title, .woocommerce-account .woocommerce > #customer_login .nectar-form-controls .control {
+				font-size: 22.5px;
+				line-height: 36.75px;
+			}
+			.wpb_wrapper h2.vc_custom_heading {
+				font-size: 22.5px!important;
+				line-height: 36.75px!important;
+			}
+		}
+		
 		
 	
+	body h4, .row .col h4, .portfolio-items .work-meta h4, .list-icon-holder[data-icon_type="numerical"] span, 
+		.portfolio-items .col.span_3 .work-meta h4, #respond h3, .blog-recent.related-posts h3.title, h3#comments, 
+		.portfolio-items[data-ps="6"] .work-meta h4, .nectar-hor-list-item[data-font-family="h4"], .toggles[data-style="minimal_small"] .toggle > h3 a, 
+		.woocommerce #reviews #reply-title, p.woocommerce.add_to_cart_inline > span.woocommerce-Price-amount, 
+		p.woocommerce.add_to_cart_inline ins > span.woocommerce-Price-amount, #header-outer .total, #header-outer .total strong { line-height:22px;  }		
+		@media only screen and (min-width: 690px) {
+			.portfolio-items[data-ps="6"] .wide_tall .work-meta h4 {
+				font-size: ;
+				line-height: ;
+			}
+
+			.nectar-slide-in-cart .widget_shopping_cart .cart_list .mini_cart_item > a:not(.remove) {
+							}
+
+		}
+
+		
+		@media only screen and (max-width: 1300px) and (min-width: 1000px) {
+			.row .col h4, body h4 {
+				font-size: 18px;
+				line-height: 22px;
+			}
+		}
+
+		@media only screen and (max-width: 999px) and (min-width: 690px) {
+			.row .col h4, body h4 {
+				font-size: 18px;
+				line-height: 22px;
+			}
+		}
+
+		@media only screen and (max-width: 690px) {
+			.row .col h4, body h4 {
+				font-size: 16.2px;
+				line-height: 19.8px;
+			}
+		}
+		
 		
 		
 		
